--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,29 +1,13 @@
+:root {
+    --baseline-ff: 'DM Mono', monospace;
+    --baseline-fw: 400;
+    --primary-color: #4DA62F;
+}
+
 body, html {
     margin: 0 auto;
     background-color: transparent;
 }
-
-.landing {
-    animation: fadeContent 2s 1s forwards;
-    opacity: 0%;
-}
-
-    @keyframes fadeContent {
-        from { opacity: 0%; }
-        to {opacity: 100%; }
-    }
-
-.marquee {
-    animation: marquee-div 2s ease-in-out 3s forwards;
-    position: fixed;
-    top: -34px;
-    animation-iteration-count: 1
-}
-
-    @keyframes marquee-div {
-        from { top: -30px; }
-        to { top: 0; }
-    }
 
 .hidden {
     display: none;
@@ -33,6 +17,38 @@ body, html {
     font-family: 'DM Mono', monospace;
     font-weight: 400;
 }
+
+/* LANDING PAGE */
+.landing {
+    animation: fadeContent 2s 1s forwards;
+    opacity: 0%;
+    position: relative;
+    top: 30px;
+}
+
+    @keyframes fadeContent {
+        from { opacity: 0%; }
+        to {opacity: 100%; }
+    }
+
+    @media only screen and (max-width: 740px) {
+        .landing {
+            top: 0;
+        }
+    }
+
+ /* SCROLLING BANNER */
+.marquee {
+    animation: marquee-div 2s ease-in-out 1s forwards;
+    position: fixed;
+    top: -34px;
+    animation-iteration-count: 1
+}
+
+    @keyframes marquee-div {
+        from { top: -30px; }
+        to { top: 0; }
+    }
 
 .bg-img {
     background-position: center;
@@ -61,7 +77,15 @@ body, html {
     margin: 0 auto;
     display: none;
     flex-direction: column;
+    position: relative;
+    top: 30px;
 }
+
+    @media only screen and (max-width: 740px) {
+        #base-grid {
+            top: 0;
+        }
+    }
 
 .title-banner {
     margin: 0 auto;
@@ -83,8 +107,8 @@ body, html {
     top: 50px;
 }
     .landing-banner .title {
-        font-family: 'DM Mono', monospace;
-        font-weight: 400;
+        font-family: var(--baseline-ff);
+        font-weight: var(--baseline-fw);
         word-wrap: break-word;
         margin: 0px;
         text-align: left;
@@ -118,6 +142,12 @@ body, html {
     color: white;
     background-color: black;
     border-radius: 5px;
+}
+
+.landing-welcome div h3 {
+    font-family: var(--baseline-ff);
+    font-weight: var(--baseline-fw);
+    font-size: 9px;
 }
 
 #enter {
