--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,7 +70,7 @@ html {
 .marquee-text {
   display: inline-block;
   width: fit-content;
-  animation: marquee-txt 40s linear infinite;
+  animation: marquee 40s linear infinite;
   text-transform: uppercase;
   font-family: var(--baseline-ff);
   font-size: 11px;
@@ -83,7 +83,7 @@ html {
   }
 }
 
-@keyframes marquee-txt {
+@keyframes marquee {
   0% {
     transform: translateX(0%); /* Start from right edge */
   }
