--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,7 +57,7 @@ html {
 
 /* SCROLLING BANNER */
 .marquee {
-  animation: marquee-div 1s ease-in-out 0.5s forwards;
+  animation: marquee-div 2s ease-in-out 0.5s forwards;
   position: fixed;
   top: -38px;
   animation-iteration-count: 1;
@@ -83,11 +83,11 @@ html {
 }
 
 .marquee-text {
+  width: fit-content;
   display: inline-block;
   justify-content: center;
   align-items: center;
-  width: fit-content;
-  animation: marquee 40s linear infinite;
+  animation: marquee 1s linear forwards;
   text-transform: uppercase;
   font-family: var(--baseline-ff);
   font-size: 11px;
@@ -95,19 +95,20 @@ html {
 
 @media only screen and (max-width: 740px) {
   .marquee-text {
-    font-size: 9px;
-    animation: marquee 60s linear infinite;
+    font-size: 10px;
+    animation: marquee 1s linear forwards;
+    transform: translateX(40%);
   }
 }
 
 @keyframes marquee {
-  0% {
-    transform: translateX(0%); /* Start from right edge */
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
   }
-  100% {
-    transform: translateX(-100%);
-  }
-}
 
 /* LANDING PAGE */
 #landing-content {
@@ -449,7 +450,7 @@ a:visited {
 .prj-info {
   margin: 0 auto;
   width: 100%;
-  font-family: var(--baseline-ff)
+  font-family: var(--baseline-ff);
 }
 
 .prj-title {
