--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@
   --baseline-fw: 400;
   --primary-color: #4da62f;
   --hidden: none;
+  --translate-start: 100%;
+  --translate-end: -100%;
+  --animation-duration: 20s; /* Adjust duration as needed */
+  --animation-delay: 5s; /* Add delay between cycles */
 }
 
 body,
@@ -57,58 +61,54 @@ html {
 
 /* SCROLLING BANNER */
 .marquee {
-  animation: marquee-div 2s ease-in-out 0.5s forwards;
-  position: fixed;
-  top: -38px;
-  animation-iteration-count: 1;
+    display: flex;
+    overflow: hidden;
+    height: 4vh;
+    user-select: none;
+    gap: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    background-color: black;
+    z-index: 1;
 }
 
-@keyframes marquee-div {
-  from {
-    top: -30px;
-  }
-  to {
-    top: 0;
-  }
-}
-
-.marquee-container {
-  overflow: hidden;
-  background-color: black;
-  color: white;
-  padding: 5px;
-  white-space: nowrap;
-  border-right: rgb(0, 0, 0) 10px solid;
-  border-left: rgb(0, 0, 0) 10px solid;
+.marquee-inner {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0;
+    min-width: 100%;
+    padding: 4px;
+    white-space: nowrap;
+    animation: marquee 100s linear infinite;
 }
 
 .marquee-text {
-  width: fit-content;
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
-  animation: marquee 1s linear forwards;
-  text-transform: uppercase;
-  font-family: var(--baseline-ff);
-  font-size: 11px;
-}
-
-@media only screen and (max-width: 740px) {
-  .marquee-text {
-    font-size: 10px;
-    animation: marquee 1s linear forwards;
-    transform: translateX(40%);
-  }
+    white-space: nowrap; /* Prevent text from wrapping */
+    text-transform: uppercase;
+    font-family: var(--baseline-ff);
+    font-size: 2vw;
+    color: white;
 }
 
 @keyframes marquee {
     0% {
-      transform: translateX(100%);
+        transform: translateX(0);
     }
+
     100% {
-      transform: translateX(-100%);
+        transform: translateX(calc(-100% - 2px));
     }
-  }
+}
+
+
+@media only screen and (max-width: 740px) {
+    .marquee-text {
+        font-size: 16px;
+    }
+}
+
 
 /* LANDING PAGE */
 #landing-content {
