--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  user-select: none;
 
   z-index: -1;
 
@@ -61,66 +62,66 @@ html {
 
 /* SCROLLING BANNER */
 .marquee {
-    display: flex;
-    overflow: hidden;
-    height: 4vh;
-    user-select: none;
-    gap: 0;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    background-color: black;
-    z-index: 1;
+  display: flex;
+  overflow: hidden;
+  height: 2vh;
+  user-select: none;
+  gap: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  background-color: black;
+  z-index: 1;
 }
 
 .marquee-inner {
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0;
-    min-width: 100%;
-    padding: 4px;
-    white-space: nowrap;
-    animation: marquee 100s linear infinite;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
+  min-width: 100%;
+  padding: 4px;
+  white-space: nowrap;
+  animation: marquee 100s linear infinite;
 }
 
 .marquee-text {
-    white-space: nowrap; /* Prevent text from wrapping */
-    text-transform: uppercase;
-    font-family: var(--baseline-ff);
-    font-size: 2vw;
-    color: white;
+  white-space: nowrap; /* Prevent text from wrapping */
+  text-transform: uppercase;
+  font-family: var(--baseline-ff);
+  font-size: 1vw;
+  color: white;
 }
 
 @keyframes marquee {
-    0% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(0);
+  }
 
-    100% {
-        transform: translateX(calc(-100% - 2px));
-    }
+  100% {
+    transform: translateX(calc(-100% - 2px));
+  }
 }
-
 
 @media only screen and (max-width: 740px) {
-    .marquee-text {
-        font-size: 16px;
-    }
+  .marquee {
+    height: 3vh;
+  }
+
+  .marquee-text {
+    font-size: 16px;
+  }
 }
 
-
 /* LANDING PAGE */
-#landing-content {
-  animation: fadeContent 2s 1s forwards;
-  opacity: 0;
+/* #landing-content {
   position: relative;
-  top: 30px;
+  top: -10px;
 }
 
 @media only screen and (max-width: 740px) {
   #landing-content {
-    top: 0;
+    top: -10px;
   }
 }
 
@@ -141,6 +142,7 @@ html {
   color: white;
   background-color: black;
   top: 50px;
+  animation: fadeContent 1s forwards;
 }
 
 @media only screen and (max-width: 740px) {
@@ -175,6 +177,8 @@ html {
   color: white;
   background-color: black;
   border-radius: 5px;
+  opacity: 0;
+  animation: fadeContent 2s 1s forwards;
 }
 
 .landing-welcome div h3 {
@@ -205,31 +209,70 @@ html {
   border: 1px solid black;
   border-radius: 2px;
   cursor: pointer;
-}
+} */
 
 /* MAIN CONTENT */
 #main-grid {
   margin: 0 auto;
-  display: var(--hidden);
   flex-direction: column;
   position: relative;
-  top: 30px;
+  opacity: 0;
+  animation: fadeIn 3s ease-in forwards;
 }
 
-@media only screen and (max-width: 740px) {
-  #main-grid {
-    top: 0;
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    display: none;
   }
+  100% {
+    opacity: 1;
+    display: flex;
+  }
+}
+
+#about-grid {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  opacity: 0;
+  animation: fadeIn 1s ease-in forwards;
+}
+
+.header-title {
+  margin-top: 40px;
+  width: fit-content;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.back-button {
+  display: flex;
+  position: relative;
+  top: -45px;
+  left: 310px;
+  width: fit-content;
+}
+
+.back-button > a > img {
+  width: 35px;
+  margin: 0;
+  border: 5px solid black;
+  background-color: black;
+  border-radius: 50%;
 }
 
 .title-banner {
   margin: 0 auto;
-  width: 660px;
-  padding: 10px;
-  position: relative;
+  width: 650px;
+  padding: 4px 10px;
   color: white;
   background-color: black;
-  top: 50px;
 }
 
 @media only screen and (max-width: 740px) {
@@ -238,75 +281,21 @@ html {
   }
 }
 
-.title-banner .title {
-  font-family: "DM Mono", monospace;
-  font-weight: 400;
+.title h1 {
+  font-family: var(--baseline-ff);
+  font-weight: 300;
   word-wrap: break-word;
-  margin: 0px;
+  margin: 0 auto;
   text-align: left;
   hyphens: manual;
   letter-spacing: -1px;
   font-size: 30px;
-  line-height: 33px;
-}
-
-.contact-card {
-  width: fit-content;
-  text-wrap: wrap;
-  padding: 10px;
-  color: white;
-  background-color: black;
-  position: relative;
-  top: 80px;
-  left: 8%;
-}
-
-@media only screen and (max-width: 740px) {
-  .contact-card {
-    top: 70px;
-    left: 15px;
-  }
-}
-
-@media only screen and (max-width: 740px) {
-  .hover-info {
-    display: none;
-  }
-}
-
-.contact-card h2 {
-  font-size: 15px;
-  line-height: 18px;
-  width: fit-content;
-  min-width: 250px;
-  font-family: "DM Mono", monospace;
-  font-weight: 400;
-  word-wrap: break-word;
-  margin: 0 auto;
-  text-align: left;
-}
-
-.link {
-  font-family: "DM Mono", monospace;
-  font-weight: 400;
-  color: #4da62f;
-  text-decoration: underline;
-}
-
-a:hover {
-  color: white;
-}
-
-a:visited {
-  color: #4da62f;
-  background-color: transparent;
-  text-decoration: underline;
 }
 
 .cursor-div {
   position: absolute;
-  left: 10px;
-  top: -30px;
+  left: 14px;
+  top: -120px;
 }
 
 .cursor-text {
@@ -322,6 +311,7 @@ a:visited {
   transform: translate(-50%, -50%);
 }
 
+/* BACKGROUND IMAGE FOR ABOUT PAGE */
 .bg-me {
   background-position: center;
   background-repeat: repeat;
@@ -344,24 +334,59 @@ a:visited {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: 20% 65%;
-  transform: scale(1.3);
+  object-position: left 60%;
+  transform: rotate(180deg);
 }
 
 @media only screen and (max-width: 1200px) {
   .bg-me img {
     height: 100%;
-    object-position: 10% 60%;
-    transform: scale(1.3);
+    object-position: left 60%;
   }
 }
 
 @media only screen and (max-width: 740px) {
   .bg-me img {
     width: 100%;
-    height: 110%;
-    object-position: 30%;
-    transform: scale(1.3);
+    object-position: 40%;
+    transform: rotate(180deg);
+  }
+}
+
+.proj-details-container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 30px;
+}
+
+@media only screen and (max-width: 1250px) {
+  .proj-details-container {
+    width: 400px;
+  }
+}
+
+.prj-details {
+  color: white;
+  background-color: black;
+  padding: 0 10px;
+}
+
+.prj-details h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  padding: 10px;
+  font-family: var(--baseline-ff);
+  font-weight: var(--baseline-fw);
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 740px) {
+  .proj-details-container {
+    width: 350px;
   }
 }
 
@@ -374,7 +399,7 @@ a:visited {
   gap: 30px 10px;
   max-width: 1100px;
   position: relative;
-  top: 100px;
+  top: 80px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -391,7 +416,7 @@ a:visited {
 }
 
 .prj-item {
-  border: 1px solid #4da62f;
+  border: 1px solid var(--primary-color);
   margin: 0 auto;
   padding: 12px;
   width: 300px;
@@ -487,37 +512,33 @@ a:visited {
 }
 
 .about-container {
-  margin: 0 200px;
-  display: grid;
-  grid-template-columns: 1fr;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
   position: relative;
-  top: 100px;
-  gap: 5%;
+  top: 0;
   border-radius: 2px;
 }
 
 @media only screen and (max-width: 1200px) {
   .about-container {
-    margin: 0 20px;
+    margin: 20px auto;
+    width: fit-content;
   }
 }
 
 .about-info {
+  font-family: var(--baseline-ff);
   margin: 0 auto;
-  padding: 10px;
-  max-width: 750px;
+  padding: 2px 10px;
+  max-width: 900px;
   color: white;
   background-color: black;
-  width: fit-content;
 }
 
 @media only screen and (max-width: 740px) {
   .about-info {
-    margin: 0;
-    padding: 10px;
-    width: fit-content;
+    margin: 0 auto;
+    padding: 5px 10px;
+    max-width: 350px;
     position: relative;
     top: -30px;
     display: flex;
@@ -525,16 +546,124 @@ a:visited {
   }
 }
 
-.about-container .about-info p {
-  font-family: "DM Mono", monospace;
+.about-info p {
+  font-family: var(--baseline-ff);
   font-weight: 400;
   word-wrap: break-word;
+}
+
+.about-info p iframe {
+  border: 2px solid var(--primary-color);
+}
+
+.about-info span {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  gap: 4px;
 }
 
 .about-info span img {
   width: 20px;
   position: relative;
-  top: 4.8px;
+  top: -2px;
+}
+
+.about-info div .image-circle {
+  border: 10px solid var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 660px;
+  height: 400px;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 2px;
+}
+
+@media only screen and (max-width: 740px) {
+  .about-info div .image-circle {
+    width: 260px;
+    overflow: hidden;
+  }
+}
+
+.image-circle {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  object-position: left 25%;
+}
+
+@media only screen and (max-width: 740px) {
+  .image-circle {
+    object-position: 50%;
+    transform: scale(1.2);
+  }
+}
+
+.contact-card {
+  width: fit-content;
+  position: absolute;
+  top: 130px;
+  right: 0;
+  text-wrap: wrap;
+  padding: 10px 20px;
+  color: white;
+  background-color: black;
+}
+
+.contact-card div {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  font-size: 15px;
+  line-height: 18px;
+  font-family: var(--baseline-ff);
+  font-weight: 400;
+  word-wrap: break-word;
+  margin: 0 auto;
+  text-align: right;
+  position: relative;
+  gap: 3px;
+}
+
+@media only screen and (max-width: 740px) {
+  .contact-card {
+    top: 50px;
+    left: 15px;
+    position: relative;
+  }
+
+  .contact-card div {
+    display: block;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.link {
+  font-family: "DM Mono", monospace;
+  font-weight: 400;
+  color: #4da62f;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: white;
+}
+
+a:visited {
+  color: #4da62f;
+  background-color: transparent;
+  text-decoration: underline;
 }
 
 #load-more {
@@ -582,5 +711,6 @@ footer h4 {
   footer h4 {
     mix-blend-mode: difference;
     text-align: center;
+    font-size: 9px;
   }
 }
