--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+
+
 :root {
   --baseline-ff: "DM Mono", monospace;
   --baseline-fw: 400;
@@ -16,6 +18,10 @@ html {
 }
 
 .hidden {
+  display: var(--hidden);
+}
+
+.mobile-hidden {
   display: var(--hidden);
 }
 
@@ -113,106 +119,8 @@ html {
   }
 }
 
-/* LANDING PAGE */
-/* #landing-content {
-  position: relative;
-  top: -10px;
-}
-
-@media only screen and (max-width: 740px) {
-  #landing-content {
-    top: -10px;
-  }
-}
-
-@keyframes fadeContent {
-  from {
-    opacity: 0%;
-  }
-  to {
-    opacity: 100%;
-  }
-}
-
-.landing-banner {
-  margin: 0 auto;
-  width: 660px;
-  padding: 10px;
-  position: relative;
-  color: white;
-  background-color: black;
-  top: 50px;
-  animation: fadeContent 1s forwards;
-}
-
-@media only screen and (max-width: 740px) {
-  .landing-banner {
-    width: 88%;
-  }
-}
-
-.landing-banner .title {
-  font-family: var(--baseline-ff);
-  font-weight: var(--baseline-fw);
-  word-wrap: break-word;
-  margin: 0px;
-  text-align: left;
-  hyphens: manual;
-  letter-spacing: -1px;
-  font-size: 30px;
-  line-height: 33px;
-}
-
-.landing-welcome {
-  margin: 0 auto;
-  width: 150px;
-  height: 150px;
-  padding: 10px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  top: 200px;
-  color: white;
-  background-color: black;
-  border-radius: 5px;
-  opacity: 0;
-  animation: fadeContent 2s 1s forwards;
-}
-
-.landing-welcome div h3 {
-  font-family: var(--baseline-ff);
-  font-weight: var(--baseline-fw);
-  font-size: 9px;
-}
-
-#enter {
-  margin: 0 auto;
-  margin-top: 5px;
-  padding: 13px 30px;
-  border: 1px solid #4da62f;
-  color: black;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-
-  font-family: var(--baseline-ff);
-  font-size: 15px;
-  background-color: white;
-  border-radius: 2px;
-}
-
-#enter:hover {
-  color: black;
-  background-color: #4da62f;
-  border: 1px solid black;
-  border-radius: 2px;
-  cursor: pointer;
-} */
-
 /* MAIN CONTENT */
-#main-grid {
+#content-grid {
   margin: 0 auto;
   flex-direction: column;
   position: relative;
@@ -241,69 +149,94 @@ html {
 .header-title {
   margin-top: 40px;
   width: fit-content;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
   margin-left: auto;
   margin-right: auto;
 }
 
-#language-switch {
-    font-family: var(--baseline-ff);
-    font-size: 30px;
-}
-
-.back-button {
-  display: flex;
-  position: relative;
-  top: -45px;
-  left: 310px;
-  width: fit-content;
-}
-
-.back-button > a > img {
-  width: 35px;
-  margin: 0;
-  border: 5px solid black;
-  background-color: black;
-  border-radius: 50%;
-}
-
-@media only screen and (max-width: 740px) {
-    .back-button {
-        top: -65px;
-        left: 315px;
-      }
+.header-title a img {
+  mix-blend-mode: color-burn;
+  padding: 10px;
+  width: 30px;
 }
 
 .title-banner {
   margin: 0 auto;
-  width: 650px;
-  padding: 4px 10px;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  padding: -1px 10px;
   color: white;
-  background-color: black;
+  background-color: white;
 }
 
-@media only screen and (max-width: 740px) {
-  .title-banner {
-    width: 88%;
-  }
-}
 
 .title h1 {
+  color: black;
   font-family: var(--baseline-ff);
   font-weight: 300;
   word-wrap: break-word;
   margin: 0 auto;
-  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   hyphens: manual;
-  letter-spacing: -1px;
-  font-size: 30px;
+  letter-spacing: 1px;
+  font-size: 27px;
 }
+
+@media only screen and (max-width: 740px) {
+  .title-banner {
+    width: 200px;
+    text-align: center;
+  }
+
+  .title h1 {
+    flex-direction: column;
+  }
+}
+
+.title h1 span {
+  justify-content: center;
+  align-items: center;
+}
+
+.title h1 img {
+  width: 32px;
+  padding: 3px 5px;
+  animation: spin 10s linear infinite;
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg);}
+  to { transform: rotate(360deg);}
+  
+}
+
 .title h1 a {
     color: var(--primary-color);
     font-weight: 700;
+}
+
+.menu-wrapper {
+  margin: 5px 0;
+  padding: 5px;
+  background-color: white;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 3px;
+}
+
+.menu-wrapper a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-wrapper a img {
+  width: 30px;
 }
 
 /* .cursor-div {
@@ -409,6 +342,22 @@ html {
   }
 }
 
+.collection-header-wrapper {
+  margin: 0 auto;
+  padding: 10px;
+}
+
+@media only screen and (max-width: 740px) {
+  .collection-header-wrapper {
+    padding: 0 50px;
+  }
+}
+
+.collection-header {
+  font-family: var(--baseline-ff);
+  font-weight: 800;
+}
+
 /* PROJECT GRID LAYOUT */
 .prj-grid {
   margin: 0 auto;
@@ -451,14 +400,6 @@ html {
   }
 }
 
-/* .prj-grid .prj-item:nth-child(1),
-.prj-grid .prj-item:nth-child(2),
-.prj-grid .prj-item:nth-child(3),
-.prj-grid .prj-item:nth-child(4),
-.prj-grid .prj-item:nth-child(5),
-.prj-grid .prj-item:nth-child(6) {
-  display: inline-block;
-} */
 
 .prj-img {
   margin-bottom: 5px;
@@ -705,6 +646,7 @@ a:visited {
 
 footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -731,5 +673,55 @@ footer h4 a img {
     mix-blend-mode: color;
     text-align: center;
     font-size: 9px;
+  }
+}
+
+.build-credit-wrapper {
+  margin-bottom: 50px;
+}
+
+.build-credit {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  border: 0.6px solid #4da62f;
+  padding: 0 5px;
+  border-radius: 20px;
+  font-family: var(--baseline-ff);
+}
+
+.build-credit h3 {
+  padding: 0 10px;
+}
+
+.build-credit img {
+  width: 7.5px;
+  padding: 0 4px;
+}
+
+@media only screen and (max-width: 740px) {
+  .build-credit {
+    width: 150px;
+    text-align: center;
+    position: relative;
+  }
+
+  .build-credit-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.about-wrapper {
+  background-image: url('/assets/images/me-1.jpg');
+  height: 1300px;
+}
+
+@media only screen and (max-width: 740px) {
+  .about-wrapper {
+    height: 1600px;
   }
 }
