--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,3 @@
-
-
 :root {
   --baseline-ff: "DM Mono", monospace;
   --baseline-fw: 400;
@@ -21,10 +19,11 @@ html {
   display: var(--hidden);
 }
 
-.mobile-hidden {
-  display: var(--hidden);
+@media only screen and (max-width: 740px) {
+  .mobile-hidden {
+    display: var(--hidden);
+  }
 }
-
 /* BACKGROUND IMAGE */
 .bg-img {
   background-position: center;
@@ -169,7 +168,6 @@ html {
   background-color: white;
 }
 
-
 .title h1 {
   color: black;
   font-family: var(--baseline-ff);
@@ -207,14 +205,17 @@ html {
 }
 
 @keyframes spin {
-  from { transform: rotate(0deg);}
-  to { transform: rotate(360deg);}
-  
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .title h1 a {
-    color: var(--primary-color);
-    font-weight: 700;
+  color: var(--primary-color);
+  font-weight: 700;
 }
 
 .menu-wrapper {
@@ -399,7 +400,6 @@ html {
     width: 350px;
   }
 }
-
 
 .prj-img {
   margin-bottom: 5px;
@@ -663,9 +663,9 @@ footer h4 {
 }
 
 footer h4 a img {
-    mix-blend-mode: screen;
-    position: relative;
-    top: 2px;
+  mix-blend-mode: screen;
+  position: relative;
+  top: 2px;
 }
 
 @media only screen and (max-width: 740px) {
@@ -716,7 +716,7 @@ footer h4 a img {
 }
 
 .about-wrapper {
-  background-image: url('/assets/images/me-1.jpg');
+  background-image: url("/assets/images/me-1.jpg");
   height: 1300px;
 }
 
