--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,6 +138,36 @@ html {
   }
 }
 
+.content-header-wrapper {
+  margin-top: 100px;
+  font-family: var(--baseline-ff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+
+.c-head-text {
+  letter-spacing: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  left: 40px;
+  mix-blend-mode: difference;
+}
+
+@media only screen and (max-width: 740px) {
+  .c-head-text {
+    letter-spacing: 1.1em;
+    left: 12px;
+  }
+}
+
 #about-grid {
   margin: 0 auto;
   display: flex;
@@ -148,8 +178,11 @@ html {
 .header-title {
   margin-top: 40px;
   width: fit-content;
+  height: fit-content;
   margin-left: auto;
   margin-right: auto;
+
+  z-index: 4;
 }
 
 @media only screen and (max-width: 740px) {
@@ -158,33 +191,73 @@ html {
   }
 }
 
-.header-title a img {
-  mix-blend-mode: color-burn;
-  padding: 10px;
-  width: 30px;
-}
-
 .title-banner {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   width: fit-content;
   padding: -1px 10px;
-  background-color: white;
+}
+
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title h1 {
-  color: black;
+  color: white;
   font-family: var(--baseline-ff);
   font-weight: 500;
   word-wrap: break-word;
-  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   hyphens: manual;
   letter-spacing: 0.5px;
   font-size: 27px;
+  border-radius: 2px;
+  padding: 3px;
+  gap: 5px;
+  mix-blend-mode: difference;
+  line-height: 18px;
+
+}
+
+.title h4 {
+  color: white;
+  font-family: var(--baseline-ff);
+  font-weight: 500;
+  word-wrap: break-word;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -55px;
+  letter-spacing: 0.5px;
+  font-size: 12px;
+  mix-blend-mode: difference;
+
+}
+
+.title h2 {
+  background-color: white;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+  padding: 3px;
+}
+
+.title h2 a {
+  display: flex;
+}
+
+.title h2 img {
+  width: 30px;
+  padding: 3px 5px;
 }
 
 @media only screen and (max-width: 740px) {
@@ -194,29 +267,17 @@ html {
   }
 
   .title h1 {
-    flex-direction: column;
+    flex-direction: row;
   }
-}
-
-.title h1 span {
-  justify-content: center;
-  align-items: center;
 }
 
 .title h1 img {
-  width: 32px;
+  width: 70px;
   padding: 3px 5px;
-  animation: spin 10s linear infinite;
+  border-radius: 50%;
+  
 }
 
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .title h1 a {
   color: var(--primary-color);
@@ -380,8 +441,12 @@ html {
   padding: 12px;
   width: 300px;
   height: fit-content;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 80%);
   border-radius: 2px;
+}
+
+.prj-item:hover{
+  background-color: rgba(0, 0, 0, 100%);
 }
 
 @media only screen and (max-width: 740px) {
@@ -414,6 +479,7 @@ html {
   object-fit: cover;
   cursor: crosshair;
 }
+
 
 @media only screen and (max-width: 740px) {
   .video {
@@ -501,6 +567,37 @@ html {
   padding: 10px;
 }
 
+#about-me-sp div {
+  display: flex;
+}
+
+#about-me-sp div h3 {
+  background-color: white;
+  margin: 0 auto;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  position: relative;
+  top: 26px;
+  left: 270px;
+  border-radius: 2px;
+  padding: 3px;
+  font-size: 14px;
+}
+
+#about-me-sp div h3 a {
+  display: flex;
+  text-align: center;
+  text-decoration: none;
+  line-height: 17px;
+  padding: 3px;
+}
+
+#about-me-sp div h3 a img {
+  width: 30px;
+  padding: 3px 5px;
+}
+
 .about-info p {
   font-family: var(--baseline-ff);
   font-weight: 400;
@@ -562,7 +659,7 @@ html {
   top: 130px;
   right: 0;
   text-wrap: wrap;
-  padding: 10px 20px;
+  padding: 10px 40px;
   color: white;
   background-color: black;
 }
@@ -613,7 +710,7 @@ a:visited {
   background-color: transparent;
   text-decoration: underline;
 }
-
+/* 
 #load-more {
   margin: 0 auto;
   margin-top: 140px;
@@ -635,7 +732,7 @@ a:visited {
   background-color: black;
   border: 1px solid black;
   border-radius: 2px;
-}
+} */
 
 footer {
   display: flex;
@@ -643,6 +740,7 @@ footer {
   justify-content: center;
   align-items: center;
   position: relative;
+  mix-blend-mode: difference;
 }
 
 footer h4 {
@@ -656,6 +754,12 @@ footer h4 {
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+footer h4 a img {
+  margin: 0 auto;
+  position: relative;
+  top: 1.5px;
 }
 
 @media only screen and (max-width: 740px) {
@@ -708,7 +812,7 @@ footer h4 {
 
 .about-wrapper {
   background-image: url("/assets/images/me-1.jpg");
-  height: 1300px;
+  height: 1400px;
 }
 
 @media only screen and (max-width: 740px) {
