--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,6 +138,12 @@ html {
   }
 }
 
+@media only screen and (max-width: 740px) {
+  #content-grid {
+    top: 50px;
+  }
+}
+
 .content-header-wrapper {
   margin-top: 100px;
   font-family: var(--baseline-ff);
@@ -262,6 +268,7 @@ html {
   .title-banner {
     width: fit-content;
     text-align: center;
+    margin-top: 150px;
   }
 
   .title h1 {
