--- a/styles/styles-v2.css
+++ b/styles/styles-v2.css
@@ -740,7 +740,7 @@ footer {
   mix-blend-mode: difference;
 }
 
-footer h4 {
+.foot-text {
   padding: 30px;
   color: white;
   font-family: var(--alt-ff);
@@ -750,17 +750,11 @@ footer h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-}
-
-footer h4 a img {
-  margin: 0 auto;
-  position: relative;
-  top: 1.5px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 740px) {
-  footer h4 {
+  .foot-text {
     text-align: center;
     font-size: 12px;
   }
