--- a/styles/styles-v2.css
+++ b/styles/styles-v2.css
@@ -26,7 +26,7 @@ html {
   }
 }
 /* BACKGROUND IMAGE */
-.bg-img {
+.bg-container {
   background-position: center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -43,7 +43,7 @@ html {
   overflow: hidden;
 }
 
-.bg-img video {
+.bg-container video {
   width: 100%;
   height: 100%;
   object-fit: cover;
